# coordinate_converter

./: README.md  pyproject.toml
.kiro/specs/: .config.kiro  design.md  requirements.md  tasks.md
coordinate_converter/: __init__.py  __main__.py
coordinate_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
coordinate_converter/converters/: geographic.py  mgrs.py  usk2000.py
coordinate_converter/coordinate_converter.egg-info/: PKG-INFO  requires.txt
coordinate_converter/core/: engine.py  models.py  protocols.py
coordinate_converter/interfaces/: cli.py  gui.py  map_dialog.py
utils/: csv_processor.py
